--- a/src/index.pug
+++ b/src/index.pug
@@ -36,10 +36,10 @@ html(lang="ru")
             .container.hero__container
 
               header.header
-                .header__col.header__col--left
+                .header__logo
                   span.logo BA
 
-                .header__col.header__col--center
+                .header__menu
 
                   - var navItems = ["Главная", "Обо мне", "Навыки", "Работы", "Отзывы", "Связаться"];
                   - var navAnchors = ["#hero", "#personal-info", "#skills", "#works", "#reviews", "#contacts"];
@@ -49,9 +49,9 @@ html(lang="ru")
                       each item, index in navItems
                         li.nav__item.nav__item--header
                           a(href=`${navAnchors[index]}`).nav__link #{item}
-                .header__col.header__col--last
+                .header__links
 
-                  .header__col.header__col--right
+                  .header__socials
 
                     - var socialItems = ['insta', 'vk', 'github'];
                     - var socialAriaLabels = ['Перейти в Instagram', 'Перейти на ВКонтакте', "Перейти на GitHub"];
@@ -64,7 +64,7 @@ html(lang="ru")
                             a(href=`${socialLinks[index]}` aria-label=`${socialAriaLabels[index]}` target="_blank").socials__link
                               +icon(item, `socials__icon socials__icon--${item}`)
 
-                  .header__col.header__col--hamburger
+                  .header__hamburger
                     .hamburger-menu
                       .hamburger-menu__bar1
                       .hamburger-menu__bar2
