--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -7,37 +7,34 @@
   }
 }
 
-.header__col {
+.header__menu {
   display: flex;
   align-items: center;
+  justify-content: center;
+  flex: 1;
 
-  &--left {
-    justify-content: flex-start;
+  @include big-tablets {
+    display: none;
+  }
+}
+
+.header__links {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.header__socials {
+  display: flex;
+  align-items: center;
+}
+
+.header__hamburger {
+  @include big-tablets {
+    padding-left: 100px;
   }
 
-  &--center {
-    flex: 1;
-    justify-content: center;
-    padding: 0 20px;
-
-    @include big-tablets {
-      display: none;
-    }
+  @include phones {
+    display: none;
   }
 
-  &--right {
-    justify-content: flex-end;
-
-
-    @include phones {
-      display: none;
-    }
-  }
-
-  &--hamburger {
-
-    @include big-tablets {
-      padding-left: 100px;
-    }
-  }
 }
