--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -5,7 +5,7 @@
   height: 100%;
 }
 
-.hero__greeting-block-wrapper {
+.hero__content {
   display: flex;
   flex-direction: column;
   align-items: center;
