--- a/src/index.pug
+++ b/src/index.pug
@@ -91,7 +91,7 @@ html(lang="ru")
                                   +icon(item, `socials__icon socials__icon--${item}`)
 
 
-              .hero__greeting-block-wrapper
+              .hero__greeting
                 h1.hero__greeting-block
                   .hero__greeting-desc
                     span.hero__greeting-text Личный сайт
@@ -155,17 +155,17 @@ html(lang="ru")
 
           .rev-cont-parallax
             .rev-cont-parallax__layer(data-speed="0.1")
-              +image("parallax/budda/layer-1.jpg", "rev-cont-parallax__image", "Слой для параллакса")
+              +image("parallax/budda/layer-1.jpg", "rev-cont-parallax__image", "")
             .rev-cont-parallax__layer(data-speed="0.3")
-              +image("parallax/budda/layer-2.png", "rev-cont-parallax__image", "Слой для параллакса")
+              +image("parallax/budda/layer-2.png", "rev-cont-parallax__image", "")
             .rev-cont-parallax__layer(data-speed="0.4")
-              +image("parallax/budda/layer-3.png", "rev-cont-parallax__image", "Слой для параллакса")
+              +image("parallax/budda/layer-3.png", "rev-cont-parallax__image", "")
             .rev-cont-parallax__layer(data-speed="0.7")
-              +image("parallax/budda/layer-4.png", "rev-cont-parallax__image", "Слой для параллакса")
+              +image("parallax/budda/layer-4.png", "rev-cont-parallax__image", "")
             .rev-cont-parallax__layer(data-speed="0.7")
-              +image("parallax/budda/layer-5.png", "rev-cont-parallax__image", "Слой для параллакса")
+              +image("parallax/budda/layer-5.png", "rev-cont-parallax__image", "")
             .rev-cont-parallax__layer(data-speed="0.7")
-              +image("parallax/budda/layer-6.png", "rev-cont-parallax__image", "Слой для параллакса")
+              +image("parallax/budda/layer-6.png", "rev-cont-parallax__image", "")
 
 
           .container
