--- a/src/styles/blocks/greeting.pcss
+++ b/src/styles/blocks/greeting.pcss
@@ -7,4 +7,8 @@
   @include less-than-tablets {
     background-image: url('../images/bg/mountain-baloon.jpg');
   }
+
+  @include phones {
+    padding-bottom: 120px;
+  }
 }
