--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -13,6 +13,14 @@
   flex: 1;
 }
 
+.hero__greeting {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+
 .hero__greeting-block {
   display: flex;
   flex-direction: column;
@@ -31,7 +39,6 @@
 }
 
 .hero__greeting-desc {
-
   @include desktop {
     text-align: right;
     margin-right: 40px;
@@ -42,7 +49,6 @@
     margin-right: 0;
     margin-bottom: 10%;
   }
-
 }
 
 .hero__greeting-text {
@@ -59,9 +65,8 @@
 }
 
 .hero__greeting-name {
-
   @include desktop {
-    line-height: .8;
+    line-height: 0.8;
     text-align: left;
   }
 
@@ -69,7 +74,6 @@
     line-height: 1;
     text-align: center;
   }
-
 }
 
 .hero__btns-block {
