--- a/src/styles/blocks/triangles-greeting.pcss
+++ b/src/styles/blocks/triangles-greeting.pcss
@@ -1,11 +1,11 @@
 .triangles-greeting {
   position: relative;
-  height: 80px;
-  margin-top: -80px;
+  height: 120PX;
+  margin-top: -120PX;
 
   @include phones {
-    height: 50px;
-    margin-top: -50px;
+    height: 50PX;
+    margin-top: -50PX;
   }
 }
 
